--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!--#UTC 8 can handle unicode as well see &# item below which is the html code for an emoji in unicode-->
     <title> &#128152; The Cheese Site </title>  <!--names tab on chrome-->
-    <meta name="description" content="This site contains Amie's personal projects">
+    <meta name="description" content="This site contains my personal projects">
 </head>
 
 <body>
